--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -21,7 +21,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: Node-5iqymq63ph2x6    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: 'application'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '10.x'                # set this to the node version to use
 
 jobs:
@@ -38,9 +38,9 @@ jobs:
       run: |
         # Build and test the project, then
         # deploy to Azure Web App.
-        npm install
-        npm run build --if-present
-        npm run test --if-present
+        cd ${{env.AZURE_WEBAPP_PACKAGE_PATH}} && npm install
+        cd ${{env.AZURE_WEBAPP_PACKAGE_PATH}} && npm run build --if-present
+        cd ${{env.AZURE_WEBAPP_PACKAGE_PATH}} && npm run test --if-present
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with:
