--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -38,9 +38,10 @@ jobs:
       run: |
         # Build and test the project, then
         # deploy to Azure Web App.
-        cd ${{env.AZURE_WEBAPP_PACKAGE_PATH}} && npm install
-        cd ${{env.AZURE_WEBAPP_PACKAGE_PATH}} && npm run build --if-present
-        cd ${{env.AZURE_WEBAPP_PACKAGE_PATH}} && npm run test --if-present
+        cd ${{env.AZURE_WEBAPP_PACKAGE_PATH}}
+        npm install
+        npm run build --if-present
+        npm run test --if-present
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with:
